[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/props/furniture/wood-floor.jpg" type="Texture" id=1]
[ext_resource path="res://scene/room/Room.gd" type="Script" id=2]
[ext_resource path="res://assets/wall segments/9patch-wall.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 168, 121 )

[node name="room" type="Node2D"]
position = Vector2( 21, 62 )
script = ExtResource( 2 )

[node name="Floors" type="Node2D" parent="."]

[node name="wood-floor" type="Sprite" parent="Floors"]
position = Vector2( 160, 117.75 )
scale = Vector2( 0.638, 0.485 )
texture = ExtResource( 1 )

[node name="Walls" type="YSort" parent="."]

[node name="Wall" parent="Walls" instance=ExtResource( 3 )]
margin_left = -20.0
margin_top = -60.0
margin_right = 336.0
margin_bottom = -2.0

[node name="Wall2" parent="Walls" instance=ExtResource( 3 )]
margin_left = -20.0
margin_top = -60.0
margin_right = 0.0
margin_bottom = 240.0

[node name="Props" type="YSort" parent="."]

[node name="WallToppers" type="Node2D" parent="."]

[node name="WallCorners" type="Node2D" parent="."]

[node name="NavMesh" type="Node2D" parent="."]

[node name="RoomArea" type="Area2D" parent="."]
collision_layer = 262144
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomArea"]
visible = false
position = Vector2( 151, 117 )
shape = SubResource( 1 )
